--- a/src/style.css
+++ b/src/style.css
@@ -73,16 +73,25 @@ h1 {
   font-style: italic;
 }
 .current-temp {
-  font-size: 53px;
+  font-size: 57px;
   font-weight: 700;
 }
+.switch-measure-system {
+  display: inline-block;
+  font-size: 20px;
+  line-height: 24px;
+  margin-top: 15px;
+  padding-left: 6px;
+  vertical-align: top;
+}
+
 .current-night-temp,
 .current-day-temp {
   font-size: 15px;
   font-style: italic;
 }
 .current-night-temp {
-  text-align: right;
+  text-align: left;
 }
 .current-day-temp {
   font-weight: 700;
@@ -95,12 +104,7 @@ h1 {
   line-height: 13px;
   margin-top: 7px;
 }
-.change-system {
-  z-index: 1;
-  position: relative;
-  bottom: 17px;
-  right: 80px;
-}
+
 #celsiusLink,
 #fahrenheitLink {
   font-weight: bold;
@@ -110,7 +114,7 @@ h1 {
 #description {
   z-index: 1;
   position: relative;
-  bottom: 12px;
+  bottom: 208px;
   right: 100px;
   font-style: italic;
   text-transform: capitalize;
@@ -121,9 +125,9 @@ h1 {
 }
 .central-img {
   position: relative;
-  right: 90px;
-  bottom: 25px;
-  max-width: 180px;
+  right: 150px;
+  bottom: 20px;
+  width: 220px;
 }
 .forecast-calendar {
   color: rgb(55, 52, 52);
@@ -158,7 +162,7 @@ img.details {
 }
 footer {
   text-align: center;
-  margin-top: 40px;
+  margin-top: 100px;
   font-size: small;
 }
 .author-link {
